--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kakadu-dev/eslint-config-base",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/"
     },
@@ -25,7 +25,7 @@
         "url": "https://github.com/kakadu-dev/eslint-config-base/issues"
     },
     "homepage": "https://github.com/kakadu-dev/eslint-config-base#readme",
-    "devDependencies": {
+    "dependencies": {
         "eslint-config-airbnb": "^18.0.1",
         "eslint-config-prettier": "^6.7.0",
         "eslint-plugin-import": "^2.17.2",
