--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@kakadu-dev/eslint-config-base",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/"
     },
@@ -29,7 +29,10 @@
         "eslint-config-airbnb": "^18.0.1",
         "eslint-config-prettier": "^6.7.0",
         "eslint-plugin-import": "^2.17.2",
-        "eslint-plugin-prettier": "^3.1.1"
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-jsx-a11y": "^6.2.3",
+        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-react-hooks": "^2.5.1"
     },
     "peerDependencies": {
         "eslint": "^6.8.0"
